--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="background-container">
         <div class="main-container" id="loginContainer">
-            <img src="https://res.cloudinary.com/dj6h1jzy8/image/upload/v1696714534/register_logo_cyz8h5.avif" class="login-logo" alt="login-logo" />
+            <img src= "https://static.vecteezy.com/system/resources/previews/000/677/514/original/man-with-laptop-studying-or-working-concept.jpg" class="login-logo" alt="login-logo" />
             <div class="container">
                 <p class="heading">Welcome Back!</p>
                 <p class="sub-heading">Login to continue</p>
@@ -35,7 +35,7 @@
         </div>
 
         <div class="main-container d-none" id="registerContainer">
-            <img src="https://res.cloudinary.com/dj6h1jzy8/image/upload/v1696671353/login-logo_a70u6f.avif" class="login-logo" alt="login-logo" />
+            <img src="https://img.freepik.com/free-vector/illustration-cartoon-female-user-entering-login_241107-682.jpg?size=626&ext=jpg" class="login-logo" alt="login-logo" />
             <div class="container">
                 <p class="heading mb-3">Register Here!</p>
                 <div class="mb-3">
@@ -64,5 +64,6 @@
         </div>
     </div>
     <script src="login.js"></script>
+    <script type="module" src="launch.js"></script>
 </body>
 </html>
